# lero

./: CLAUDE.md  README.md  coverage.xml  pyproject.toml
.claude/: settings.local.json
examples/: README.md  analyze_dataset.py  batch_copy_episodes.py  batch_copy_episodes.sh  validate_dataset.py
lero/: __init__.py
lero/dataset_editor/: cli.py  constants.py  core.py  display.py  metadata.py  operations.py
lero/gui/: __init__.py  controls.py  viewer.py
lerobot_dataset_editor/: __init__.py  __main__.py
lerobot_dataset_editor/dataset_editor/: cli.py  core.py  display.py
lerobot_dataset_editor/gui/: __init__.py  viewer.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_cli_e2e.py  test_dataset_operations_e2e.py  test_error_handling_e2e.py  test_examples_e2e.py  test_gui_e2e.py
